<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/cigarette_header"
            android:textColor="#FF80CBC4"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/cigs_per_pack" />

        <EditText
            android:id="@+id/cigs_per_pack_value"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="number"
            android:paddingLeft="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/price_per_pack" />

        <EditText
            android:id="@+id/price_per_pack_value"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:paddingLeft="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/price_per_cig_title" />

        <EditText
            android:id="@+id/price_per_cig_value"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:paddingLeft="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/smoker_header"
            android:textColor="#FF80CBC4"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/days_to_quit_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="number"
            android:paddingLeft="16dp"
            android:text="30" />

        <CheckBox
            android:id="@+id/gather_data_chk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="8dp"
            android:text="@string/gather_data_prompt" />

        <LinearLayout
            android:id="@+id/smoker_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/avg_cigs_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number"
                android:paddingLeft="16dp"
                android:text="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/avg_awake_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number"
                android:paddingLeft="16dp"
                android:text="16" />
        </LinearLayout>

        <TextView
            android:id="@+id/reasons_button"
            android:textColor="#000000"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/reasons_button" />

        <!--
        <ListView
            android:id="@+id/reasons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
        -->
    </LinearLayout>
</ScrollView>
