<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReasonsActivity">

    <TextView
        android:id="@+id/reason_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"
        android:text="@string/reasons_about"/>

    <ListView
        android:id="@+id/reasons_layout"
        android:layout_below="@+id/reason_about"
        android:layout_above="@id/add_reason_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <Button
        android:id="@+id/add_reason_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel_submit_buttons"
        android:visibility="gone"
        android:text="@string/add_reason_btn"/>

    <LinearLayout
        android:id="@+id/cancel_submit_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discard_btn" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit_btn"/>
    </LinearLayout>

</RelativeLayout>